--- a/ecommerce-mail-service/pom.xml
+++ b/ecommerce-mail-service/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.com.mj</groupId>
-	<artifactId>ecommerce-checkout-api-1</artifactId>
+	<artifactId>ecommerce-order-api</artifactId>
 	<version>1.0.0</version>
-	<name>ecommerce-checkout-api-1</name>
-	<description>Demo project for Spring Boot</description>
+	<name>ecommerce-order-api</name>
+	<description></description>
 
 	<properties>
 		<java.version>1.8</java.version>
