--- a/ecommerce-clientes-api/src/main/resources/application.properties
+++ b/ecommerce-clientes-api/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=bitlyuf
 
-queue.welcome.mail.name=WelcomeMailQueue
+exchange.name=ecommerce
+exchange.routing.mail-welcome=mail_welcome
